crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__lines_after_imports_class_after.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
I001 [*] Import block is un-sorted or un-formatted
  --> lines_after_imports_class_after.py:1:1
   |
 1 | / from __future__ import annotations
 2 | |
 3 | | from typing import Any
 4 | |
 5 | | from requests import Session
 6 | |
 7 | | from my_first_party import my_first_party_object
 8 | |
 9 | | from . import my_local_folder_object
   | |____________________________________^
10 |   class Thing(object):
11 |     name: str
   |
help: Organize imports
  |
1 + from __future__ import annotations
2 + 
3 + from typing import Any
4 + 
5 + from my_first_party import my_first_party_object
6 + from requests import Session
7 + 
8 + from . import my_local_folder_object
  |
